srcs = files([
    'AbstractFileModifier.vala',
    'AbstractTestSyncEngine.vala',
    'DelayedReply.vala',
    'DiskFileModifier.vala',
    'FakeChunkMoveReply.vala',
    'FakeCredentials.vala',
    'FakeDeleteReply.vala',
    'FakeErrorReply.vala',
    'FakeFolder.vala',
    'FakeGetReply.vala',
    'FakeGetWithDataReply.vala',
    'FakeHangingReply.vala',
    'FakeJsonErrorReply.vala',
    'FakeMkcolReply.vala',
    'FakeMoveReply.vala',
    'FakePayloadReply.vala',
    'FakePropfindReply.vala',
    'FakePutMultiFileReply.vala',
    'FakePutReply.vala',
    'FakeQNAM.vala',
    'FakeReply.vala',
    'FileInfo.vala',
    'ItemCompletedSpy.vala',
    'PathComponents.vala',
    'SyncEngineTestUtils.vala',
    'TestAbortAfterFailedMkdir.vala',
    'TestChecksumValidation.vala',
    'TestDirectoryDownload.vala',
    'TestDirectoryDownloadWithError.vala',
    'TestDirectoryEtagAfterIncompleteSync.vala',
    'TestDirectoryInitialModTime.vala',
    'TestDirectoryUpload.vala',
    'TestDirectoryUploadWithDelayedAlgorithm.vala',
    'TestDiscoveryHiddenFile.vala',
    'TestEmlLocalChecksum.vala',
    'TestEmptyLocalButHasRemote.vala',
    'TestErrorsWithBulkUpload.vala',
    'TestFakeConflictData.vala',
    'TestFakeConflict.vala',
    'TestFileDownload.vala',
    'TestFileUpload.vala',
    'TestInsufficientRemoteStorage.vala',
    'TestInvalidFilenameRegex.vala',
    'TestLocalDelete.vala',
    'TestNoLocalEncoding.vala',
    'TestPropagatePermissions.vala',
    'TestRemoteDelete.vala',
    'TestSelectiveSyncBug.vala',
    'TestSyncFileItemProperties.vala',
    'TestUploadV1MultiAbort.vala',
])

# Dependences
deps = [
    # dependency('gio-2.0'),
    # dependency('gtk4'),
    # dependency('granite'),
    # dependency('gee-0.8'),
    # libjson-glib-dev
    dependency('json-glib-1.0'),
    dependency('libsoup-2.4'),
]

executable(
    meson.project_name(),
    srcs,
    dependencies: deps,
    install: true
)